# Mini-Agent

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.runtime/: session_id
docs/: forge-spec.md  journal-spec.md
examples/: 02_simple_agent.py  05_provider_selection.py  06_tool_schema_demo.py
mini_agent/: __init__.py  __main__.py  agent.py  audit.py  concept-explorer.html  config.py  context.py  context_budget.py  cost.py  dream.py  events.py  hooks.py  log.py  message_log.py  permissions.py  phase_gating.py  repo_map.py  retry.py  sandbox.py  session_memory.py  tool_execution.py  tui.py  tui_simple.py
mini_agent/benchmarks/: __init__.py  humaneval_runner.py  swebench_runner.py
mini_agent/cli/: __init__.py  app.py  completions.py  permissions.py  repl.py  session.py  setup.py  status_bar.py
mini_agent/concepts/: AgentLoop.concept  Configuration.concept  ContextBudget.concept  Memory.concept  MessageLog.concept  MiniAgent.app  Permission.concept  PhaseGating.concept  RepoMap.concept  Session.concept  ToolExecution.concept
mini_agent/docs/: ARCHITECTURE.md  DESIGN.md
mini_agent/llm/: __init__.py  anthropic_client.py  base.py  llm_wrapper.py  openai_client.py
mini_agent/schema/: __init__.py  schema.py
mini_agent/tools/: __init__.py  base.py  (+11 more)
tests/: test_agent.py  test_agent_tool.py  test_audit.py  test_bash_tool.py  test_config.py  test_context.py  test_cost.py  test_dream.py  test_fork.py  test_git_tool.py  test_glob_tool.py  test_grep_tool.py  test_hooks.py  test_integration.py  test_linter.py  test_live_agent.py  test_llm.py  test_llm_clients.py  test_log.py  test_mcp.py  test_observation_masking.py  test_permissions.py  test_project_root.py  test_sandbox.py  test_session_memory.py  test_tools.py  test_tui.py  test_web_tools.py  test_windowed_read.py
(+11 files in other folders)
