[project]
name = "mini-agent"
version = "0.2.0"
description = "A production-quality AI coding agent with tool use, context management, and benchmarking"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mini Agent Team"}
]
license = {text = "MIT"}
keywords = ["ai", "agent", "coding", "llm", "tools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "anthropic>=0.39.0",
    "openai>=1.57.4",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/evangstav/Mini-Agent"
Repository = "https://github.com/evangstav/Mini-Agent"

[project.scripts]
mini-agent = "mini_agent.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mini_agent*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
mini_agent = ["config/*.md", "config/*.json", "concepts/*.concept"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "workspace/.pytest_cache"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]
bench = [
    "datasets>=2.0.0",
    "evalplus>=0.3.0",
    "gitpython>=3.1.0",
]
